--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ body {
   justify-content: center;
   align-items: center; */
   /* border: 2px black solid; */
-  width: 600px;
+  max-width: 600px;
+  min-width: 500px;
   margin: auto;
   text-align: center;
   font-family: "Luckiest Guy", cursive;
